--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AllMoviesHD Hindi | Home</title>
+    <style>
+        body { font-family: sans-serif; background: #f0f0f0; margin: 0; }
+        .header { background: #fff; padding: 20px; text-align: center; border-bottom: 4px solid #e91e63; }
+        .movie-list { display: flex; flex-direction: column; padding: 10px; }
+        .movie-item { background: #fff; display: flex; padding: 10px; margin-bottom: 5px; text-decoration: none; color: #333; border-radius: 8px; }
+        .movie-item img { width: 70px; height: 100px; border-radius: 5px; margin-right: 15px; }
+        .m-title { font-weight: bold; font-size: 16px; margin-top: 10px; }
+    </style>
+</head>
+<body>
+<div class="header"><h1 style="margin:0; color:#e91e63;">ALLMOVIESHD HINDI</h1></div>
+<div id="movie-container" class="movie-list">Loading Movies...</div>
+
 <script>
-    function display(movies) {
+    async function load() {
+        const res = await fetch('news.json');
+        const data = await res.json();
         const container = document.getElementById('movie-container');
-        container.innerHTML = movies.map(m => `
-            <a href="download.html?id=${encodeURIComponent(m.id)}" class="movie-item">
-                <img src="${m.img}" alt="poster">
-                <div class="m-details">
-                    <div class="m-title">${m.title}</div>
-                    <div class="m-tag">Direct Download | HD</div>
-                </div>
+        container.innerHTML = data.news_items.map(m => `
+            <a href="download.html?name=${encodeURIComponent(m.title)}" class="movie-item">
+                <img src="${m.img}">
+                <div class="m-title">${m.title} (${m.year})</div>
             </a>`).join('');
     }
+    load();
 </script>
+</body>
+</html>
