--- a/index.html
+++ b/index.html
@@ -2,32 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AllMoviesHD Hindi | Home</title>
+    <title>AllMoviesHD Hindi | Official Home</title>
     <style>
-        body { font-family: sans-serif; background: #f0f0f0; margin: 0; }
-        .header { background: #fff; padding: 20px; text-align: center; border-bottom: 4px solid #e91e63; }
-        .movie-list { display: flex; flex-direction: column; padding: 10px; }
-        .movie-item { background: #fff; display: flex; padding: 10px; margin-bottom: 5px; text-decoration: none; color: #333; border-radius: 8px; }
-        .movie-item img { width: 70px; height: 100px; border-radius: 5px; margin-right: 15px; }
-        .m-title { font-weight: bold; font-size: 16px; margin-top: 10px; }
+        body { font-family: sans-serif; background: #f4f4f4; margin: 0; }
+        .header { background: #fff; padding: 20px; text-align: center; border-bottom: 5px solid #e91e63; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-size: 28px; font-weight: 900; color: #333; }
+        .logo span { color: #e91e63; }
+        .movie-list { padding: 15px; max-width: 800px; margin: auto; }
+        .movie-card { background: #fff; display: flex; padding: 12px; margin-bottom: 10px; text-decoration: none; color: #333; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+        .movie-card img { width: 80px; height: 110px; border-radius: 5px; object-fit: cover; }
+        .info { padding-left: 15px; display: flex; flex-direction: column; justify-content: center; }
+        .m-title { font-weight: bold; font-size: 17px; margin-bottom: 5px; color: #0033cc; }
     </style>
 </head>
 <body>
-<div class="header"><h1 style="margin:0; color:#e91e63;">ALLMOVIESHD HINDI</h1></div>
-<div id="movie-container" class="movie-list">Loading Movies...</div>
+
+<div class="header"><div class="logo"><span>ALL</span>MOVIES<span>HD</span> HINDI</div></div>
+
+<div id="list" class="movie-list">Loading Movies...</div>
 
 <script>
-    async function load() {
+    async function getMovies() {
         const res = await fetch('news.json');
         const data = await res.json();
-        const container = document.getElementById('movie-container');
-        container.innerHTML = data.news_items.map(m => `
-            <a href="download.html?name=${encodeURIComponent(m.title)}" class="movie-item">
+        const list = document.getElementById('list');
+        list.innerHTML = data.news_items.map((m, index) => `
+            <a href="download.html?movieid=${index}" class="movie-card">
                 <img src="${m.img}">
-                <div class="m-title">${m.title} (${m.year})</div>
+                <div class="info">
+                    <div class="m-title">${m.title}</div>
+                    <div style="font-size:12px; color:#666;">Quality: 720p HD | Size: 450MB</div>
+                </div>
             </a>`).join('');
     }
-    load();
+    getMovies();
 </script>
+
 </body>
 </html>
