--- a/index.html
+++ b/index.html
@@ -2,40 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AllMoviesHD Hindi | Official Home</title>
+    <title>AllMoviesHD | Home</title>
     <style>
-        body { font-family: sans-serif; background: #f4f4f4; margin: 0; }
-        .header { background: #fff; padding: 20px; text-align: center; border-bottom: 5px solid #e91e63; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-size: 28px; font-weight: 900; color: #333; }
-        .logo span { color: #e91e63; }
-        .movie-list { padding: 15px; max-width: 800px; margin: auto; }
-        .movie-card { background: #fff; display: flex; padding: 12px; margin-bottom: 10px; text-decoration: none; color: #333; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
-        .movie-card img { width: 80px; height: 110px; border-radius: 5px; object-fit: cover; }
-        .info { padding-left: 15px; display: flex; flex-direction: column; justify-content: center; }
-        .m-title { font-weight: bold; font-size: 17px; margin-bottom: 5px; color: #0033cc; }
+        body { font-family: 'Segoe UI', sans-serif; background: #050505; color: white; margin: 0; }
+        .hero { width: 100%; height: 300px; background: linear-gradient(to bottom, transparent, #050505), url('https://image.tmdb.org/t/p/original/8FHOTUpNik5ZPEay2N2EY5lrxkv.jpg'); background-size: cover; display: flex; align-items: flex-end; padding: 20px; }
+        .hero-btn { background: #e91e63; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; }
+        .section-title { padding: 15px; font-size: 20px; color: #e91e63; font-weight: bold; }
+        .grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; padding: 15px; }
+        .card { background: #111; border-radius: 12px; overflow: hidden; border: 1px solid #222; transition: 0.3s; }
+        .card:hover { border-color: #e91e63; transform: scale(1.02); }
+        .card img { width: 100%; height: 200px; object-fit: cover; }
+        .card-info { padding: 10px; font-size: 14px; text-align: center; }
+        .card-info b { display: block; margin-bottom: 5px; color: #fff; }
+        .folder-tag { background: #ffc107; color: black; font-size: 10px; padding: 2px 5px; border-radius: 3px; position: absolute; margin: 5px; }
     </style>
 </head>
 <body>
 
-<div class="header"><div class="logo"><span>ALL</span>MOVIES<span>HD</span> HINDI</div></div>
+<div class="hero">
+    <div>
+        <h2>Featured: Captain America</h2>
+        <a href="https://gplinks.co/Fsaea" class="hero-btn">Watch Now</a>
+    </div>
+</div>
 
-<div id="list" class="movie-list">Loading Movies...</div>
+<div class="section-title">Latest Updates</div>
+<div class="grid" id="movie-grid">
+    </div>
 
 <script>
-    async function getMovies() {
+    async function loadMovies() {
         const res = await fetch('news.json');
         const data = await res.json();
-        const list = document.getElementById('list');
-        list.innerHTML = data.news_items.map((m, index) => `
-            <a href="download.html?movieid=${index}" class="movie-card">
-                <img src="${m.img}">
-                <div class="info">
-                    <div class="m-title">${m.title}</div>
-                    <div style="font-size:12px; color:#666;">Quality: 720p HD | Size: 450MB</div>
-                </div>
-            </a>`).join('');
+        const grid = document.getElementById('movie-grid');
+        
+        data.news_items.forEach(item => {
+            const card = document.createElement('div');
+            card.className = 'card';
+            // Folder check
+            const link = item.type === 'folder' ? `collection.html` : `download.html?id=${item.id}`;
+            
+            card.innerHTML = `
+                <a href="${link}" style="text-decoration:none; color:inherit;">
+                    ${item.type === 'folder' ? '<span class="folder-tag">FOLDER</span>' : ''}
+                    <img src="${item.img}">
+                    <div class="card-info">
+                        <b>${item.title}</b>
+                        <small style="color:#888;">${item.year}</small>
+                    </div>
+                </a>
+            `;
+            grid.appendChild(card);
+        });
     }
-    getMovies();
+    loadMovies();
 </script>
 
 </body>
